# sardine

./: .gitignore  README.md  boris.toml  master.toml
framework/: mafia  master.toml
sardine-compiler/: ambiata-sardine-compiler.cabal  ambiata-sardine-compiler.lock-7.10.2  ambiata-sardine-compiler.lock-7.8.4  ambiata-sardine-compiler.lock-8.0.1
sardine-compiler/main/: sardine.hs
sardine-compiler/src/Sardine/: Compiler.hs  Error.hs  Pretty.hs
sardine-compiler/src/Sardine/Compiler/: Analysis.hs  Data.hs  Decode.hs  Default.hs  Encode.hs  Environment.hs  Error.hs  Fresh.hs  Ident.hs  Module.hs  Monad.hs  Names.hs  Preamble.hs  Pretty.hs  TypeId.hs  Util.hs
sardine-compiler/src/Sardine/Haskell/: Combinators.hs  Pretty.hs
sardine-compiler/test/: test-cli.hs  test.hs
sardine-compiler/test/Test/Sardine/: Arbitrary.hs
sardine-compiler/test/Test/Sardine/Compiler/: Data.hs
sardine-runtime/: ambiata-sardine-runtime.cabal  ambiata-sardine-runtime.lock-8.0.1
sardine-runtime/src/Sardine/: Runtime.hs
sardine-runtime/src/Sardine/Runtime/: Base.hs  Buffer.hs  Data.hs  Decode.hs  Encode.hs  Internal.hs  Primitive.hs  Thrift.hs  VarInt.hs  ZigZag.hs
sardine-runtime/test/: test.hs
sardine-runtime/test/Test/Sardine/: Arbitrary.hs  Runtime.hs
