name:                  ambiata-sardine-compiler
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-sardine-compiler
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-sardine-compiler

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , text                            == 1.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Sardine.Compiler

executable sardine
  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    gen

  main-is:
                    ../main/sardine.hs

  build-depends:
                      base
                    , ambiata-p
                    , ambiata-sardine-compiler
                    , ambiata-x-optparse
                    , optparse-applicative            == 0.12.*
                    , text


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-sardine-compiler
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , ambiata-sardine-compiler
                    , text
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-sardine-compiler
