name:                  ambiata-sardine-compiler
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-sardine-compiler
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           ambiata-sardine-compiler

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , ansi-wl-pprint                  == 0.6.*
                    , bytestring                      == 0.10.*
                    , filepath                        >= 1.3        && < 1.5
                    , language-thrift                 == 0.7.*
                    , lens                            >= 4.9        && < 4.14
                    , text                            == 1.2.*
                    , trifecta                        == 1.5.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Sardine.Compiler
                    Sardine.Compiler.Data
                    Sardine.Compiler.Error
                    Sardine.Compiler.Ident
                    Sardine.Compiler.Preamble
                    Sardine.Compiler.Pretty

executable sardine
  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    gen

  main-is:
                    ../main/sardine.hs

  build-depends:
                      base
                    , ambiata-p
                    , ambiata-sardine-compiler
                    , ambiata-x-optparse
                    , optparse-applicative            == 0.12.*
                    , text


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-disorder-eithert
                    , ambiata-p
                    , ambiata-sardine-compiler
                    , ambiata-x-eithert
                    , containers                      == 0.5.*
                    , directory                       == 1.2.*
                    , filepath                        >= 1.3        && < 1.5
                    , language-thrift                 == 0.7.*
                    , process                         >= 1.2.3      && < 1.5
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*
                    , shakespeare                     == 2.0.*
                    , temporary                       == 1.2.*
                    , text                            == 1.2.*
                    , transformers                    >= 0.4        && < 0.6
                    , uniplate                        == 1.6.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , ambiata-sardine-compiler
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*
                    , text

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-disorder-core
                    , ambiata-sardine-compiler
