name:                  ambiata-sardine-runtime
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-sardine-runtime
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-sardine-runtime

library
  build-depends:
                      base                            >= 3          && < 5
                    , bytestring                      == 0.10.*
                    , ghc-prim                        >= 0.3        && < 0.5
                    , hybrid-vectors                  == 0.2.*
                    , text                            == 1.2.*
                    , vector                          == 0.11.*

  ghc-options:
                    -Wall -O2

  hs-source-dirs:
                    src

  exposed-modules:
                    Sardine.Runtime
                    Sardine.Runtime.Base
                    Sardine.Runtime.Data
                    Sardine.Runtime.Decode
                    Sardine.Runtime.Encode
                    Sardine.Runtime.ZigZag

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-sardine-runtime
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , bytestring                      == 0.10.*
                    , hybrid-vectors                  == 0.2.*
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*
                    , vector                          == 0.11.*
