name:                  ambiata-sardine-runtime
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-sardine-runtime
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-sardine-runtime

library
  build-depends:
                      base                            >= 3          && < 5
                    , bifunctors                      >= 4.2        && < 5.3
                    , bytestring                      == 0.10.*
                    , contravariant                   >= 1.0        && < 1.5
                    , ghc-prim                        >= 0.3        && < 0.5
                    , hybrid-vectors                  == 0.2.*
                    , primitive                       == 0.6.*
                    , text                            == 1.2.*
                    , transformers                    >= 0.3        && < 0.6
                    , vector                          == 0.11.*
                    , void                            >= 0.5        && < 0.8

  ghc-options:
                    -Wall -O2

  hs-source-dirs:
                    src

  exposed-modules:
                    Sardine.Runtime
                    Sardine.Runtime.Buffer
                    Sardine.Runtime.Internal
                    Sardine.Runtime.Primitive
                    Sardine.Runtime.Thrift
                    Sardine.Runtime.VarInt
                    Sardine.Runtime.ZigZag

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-sardine-runtime
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , bytestring                      == 0.10.*
                    , hybrid-vectors                  == 0.2.*
                    , QuickCheck                      >= 2.8.2      && < 2.9
                    , quickcheck-instances            == 0.3.*
                    , text                            == 1.2.*
                    , vector                          == 0.11.*
